# newyorkcity_tss_client

./: .gitignore  BUILD.md  CHANGELOG.md  CLI_APP.md  Cargo.toml  DEMO.md  README.md  Settings.toml  TEST.md  androidbuild.sh  build.sh  cli.yml  makefile
.github/workflows/: build.yml  ci.yml  create_new_tag.yml  release.yml  test.yml
src/: lib.rs  main.rs  tests.rs
src/btc/: address.rs  dto.rs  mod.rs  raw_tx.rs  utils.rs
src/dto/: btc.rs  ecdsa.rs  eth.rs  mod.rs
src/ecdsa/: get_addrs.rs  get_raw_tx.rs  keygen.rs  mod.rs  recover.rs  rotate.rs  sign.rs  types.rs  utils.rs
src/escrow/: mod.rs
src/eth/: address.rs  mod.rs  raw_tx.rs  transaction.rs  utils.rs
src/eth/erc20/: token_addresses_map.json  usdt_rinkeby.json
src/rotation/: mod.rs  party1.rs  party2.rs
src/schnorr/: mod.rs
src/tests/: mod.rs
src/utilities/: a_requests.rs  dto.rs  err_handling.rs  ffi.rs  hd_wallet.rs  key_recover.rs  mod.rs  requests.rs  rotate.rs  tests.rs
src/wallet/: mod.rs
test-assets/: btc_w.json  eth_w.json  rotate_w.json  wallet.json
wallet/: data.json
