[package]
name = "newyorkcity_tss_client"
version = "0.1.4"
authors = [
    "gbenattar <g.benattar@gmail.com>",
    "Oded Leiba <odedleiba5@gmail.com>"
]
edition = "2021"

[lib]
name = "client"
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib", "lib"]

[[bin]]
name = "cli"
path = "src/main.rs"

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
log = "0.4"
clap = { version = "2.32", features = ["yaml"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
uuid = { version = "0.8.2", features = ["v4"] }
itertools = "0.10.3"
hex = "0.4.3"
bitcoin = "0.27.1"
config = "0.11.0"
floating-duration = "0.1.2"
curv = { package = "curv-kzen", version = "0.7" }
web3 = "0.18.0"
anyhow = "1.0.56"
openssl = { version = '0.10', features = ["vendored"] }
tokio = { version = "1", features = ["full"] }

[dependencies.zk-paillier]
git = "https://github.com/KZen-networks/zk-paillier"
tag = "v0.3.12"

[dependencies.kms]
git = "https://github.com/KZen-networks/kms-secp256k1"
tag = "v0.3.0"

[dependencies.multi-party-ecdsa]
git = "https://github.com/KZen-networks/multi-party-ecdsa"
tag = "v0.4.6"

# [dependencies.multi-party-eddsa]
# git = "https://github.com/KZen-networks/multi-party-eddsa"
# tag = "v0.2.2"

# [dependencies.multi-party-schnorr]
# git = "https://github.com/KZen-networks/multi-party-schnorr"
# tag = "v0.4.4"

[dependencies.centipede]
git = "https://github.com/KZen-networks/centipede"
tag = "v0.2.12"

[patch.crates-io]
rust-gmp = { version = "0.5.0", features = ["serde_support"], git = "https://github.com/KZen-networks/rust-gmp" }
