[package]
name = "newyorkcity_tss_client"
version = "0.1.4"
authors = [
    "gbenattar <g.benattar@gmail.com>",
    "Oded Leiba <odedleiba5@gmail.com>"
]
edition = "2021"

[lib]
name = "client"
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib", "lib"]

[[bin]]
name = "cli"
path = "src/main.rs"

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
log = "0.4"
clap = { version = "2.32", features = ["yaml"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
uuid = { version = "0.8.2", features = ["v4"] }
itertools = "0.10.3"
hex = "0.4.3"
bitcoin = "0.27.1"
config = "0.11.0"
floating-duration = "0.1.2"
web3 = "0.18.0"
anyhow = "1.0"
openssl = { version = '0.10', features = ["vendored"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
thiserror = "1.0"
rlp = "0.5.1"
two-party-ecdsa = { git = "https://github.com/ZenGo-X/two-party-ecdsa.git" }
ethers = { git = "https://github.com/gakonst/ethers-rs" }


[dependencies.kms]
git = "https://github.com/KZen-networks/kms-secp256k1"
branch = "2.0"

[dependencies.multi-party-ecdsa]
git = "https://github.com/KZen-networks/multi-party-ecdsa"
branch = "master"
